# honse-tracker

./: .gitattributes  .gitignore  .hikerconf  Cargo.toml  README.md  cog.toml  rust-toolchain.toml  rustfmt.toml
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml  release.yml
.hiker/facts/: honse-extraction.facts.json
.hiker/tents/honse-extraction/: CONTEXT.md  honse-extraction.tent
.taskman/plans/: initiatives.jsonl  plans.jsonl
.taskman/plans/fix-plugin-gameinit-bootstrap/: HANDOFF.md  tasks.jsonl
.taskman/plans/productize-own-overlay/: HANDOFF.md  tasks.jsonl
.taskman/plans/self-hosted-overlay/: INITIATIVE.md
.taskman/plans/spike-own-egui-overlay/: FINDINGS.md  HANDOFF.md  tasks.jsonl
crates/edge-sdk/: Cargo.toml  FFI_AUDIT.md
crates/edge-sdk/src/: api.rs  entry.rs  ffi.rs  gui.rs  lib.rs  log.rs  sdk.rs
crates/honse-services/: Cargo.toml
crates/honse-services/src/: config.rs  event.rs  events.rs  frame.rs  hotkeys.rs  init.rs  lib.rs  scene_views.rs  surface.rs  view_hook.rs
crates/honse-services/src/hosted_data/: cache.rs  client.rs  mod.rs  updater.rs
crates/honse-services/src/overlay/: d3d11_state.rs  mod.rs  stack.rs
crates/honse-telemetry/: Cargo.toml  build.rs
crates/honse-telemetry/proto/hachimi/telemetry/v1/: telemetry.proto
crates/honse-telemetry/src/: config.rs  lib.rs  publisher.rs  transport.rs
crates/honse-ui/: Cargo.toml  DOWNGRADE_NOTES.md
crates/honse-ui/src/: components.rs  lib.rs  paint.rs  theme.rs
plugins/debug-viewer/: Cargo.toml
plugins/debug-viewer/src/: state.rs
plugins/hello-edge/: Cargo.toml
plugins/hello-edge/src/: lib.rs
plugins/honse-debug/: Cargo.toml
plugins/honse-debug/src/: hooks.rs  lib.rs  own_overlay.rs  ui.rs
plugins/honse-race-hud/: Cargo.toml
plugins/honse-race-hud/src/: capture.rs  lib.rs  tick.rs  ui.rs
plugins/honse-tracker/: Cargo.toml  PORT_NOTES.md
plugins/honse-tracker/assets/: course_params.json
plugins/honse-tracker/src/: bond_progress.rs  build_profile.rs  career_meta.rs  chara_effects.rs  class_dump.rs  cm_model.rs  command_hooks.rs  compat.rs  config.rs  course_data.rs  deck_bonuses.rs  diagnostics.rs  entry.rs  eval_data.rs  evaluation.rs  gametora_data.rs  hooks.rs  hotkey_binds.rs  lib.rs  overlay_cache.rs  overlay_prefs.rs  planner.rs  race_context.rs  rank_table.rs  read_gate.rs  recommend.rs  shop_hooks.rs  skill_shop_prefs.rs  stat_targets.rs  telemetry.rs
plugins/honse-tracker/src/il2cpp/: api.rs  mod.rs  symbols.rs  types.rs
plugins/honse-tracker/src/memory_reader/: chain.rs  command_info.rs  eval_master.rs  evaluations.rs  il2cpp.rs  mod.rs  presentation.rs  reserve.rs  skills.rs  snapshot.rs  story_events.rs  support_deck.rs
plugins/honse-tracker/src/memory_reader/scenario/: items.rs  master_shop.rs  mod.rs  trackblazer.rs
plugins/honse-tracker/src/skill_shop/: access.rs  crypto.rs  il2cpp.rs  logic.rs  mod.rs  purchase.rs
plugins/honse-tracker/src/ui/: constants.rs  dimens.rs  icons.rs  menu.rs  mod.rs  overlay.rs  skill_shop_tab.rs  snapshot.rs  textures.rs  util.rs
plugins/honse-tracker/src/ui/career/: bonds.rs  bonds_table.rs  header.rs  mod.rs  skills.rs  theme.rs  training.rs
plugins/honse-tracker/src/ui/scenario/: mod.rs  trackblazer.rs
plugins/honse-tracker/tests/: hiker_intent.rs
plugins/honse-tracker/veterans/: mejiro-ryan-1.json  seiun-sky-1.json
plugins/race-hud/: Cargo.toml
plugins/race-hud/src/: lib.rs  settings.rs  sim.rs  state.rs  telemetry.rs  ui.rs
scripts/: check-rustc-lockstep.ps1  deploy-windows.ps1
