[package]
name = "honse-services"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "honse_services"
path = "src/lib.rs"

[dependencies]
edge-sdk = { path = "../edge-sdk" }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
