[package]
name = "honse-services"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "honse_services"
path = "src/lib.rs"

[dependencies]
edge-sdk = { path = "../edge-sdk" }
egui = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[lints]
workspace = true
