[package]
name = "honse-services"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
name = "honse_services"
path = "src/lib.rs"

[dependencies]
blake3 = { workspace = true }
chrono = { workspace = true }
edge-sdk = { path = "../edge-sdk" }
# `default_fonts` is for the self-hosted overlay (`overlay` module): our own
# egui context needs embedded fonts (the retired host-egui path used edge's).
egui = { workspace = true, features = ["default_fonts"] }
log = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ureq = { workspace = true }

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
# Self-hosted overlay renderer (own egui + DX11; zero host-egui coupling).
egui-directx11 = "=0.12.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[lints]
workspace = true
