[package]
name = "honse-debug"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Development-only plugin that records view transitions and live debug values"

[lib]
name = "honse_debug"
crate-type = ["cdylib", "rlib"]

[dependencies]
edge-sdk = { path = "../../crates/edge-sdk" }
honse-services = { path = "../../crates/honse-services" }
honse_ui = { path = "../../crates/honse-ui" }
# `default_fonts` is for the self-hosted overlay spike: our own egui context
# needs embedded fonts (the host-egui path uses edge's fonts instead).
egui = { workspace = true, features = ["default_fonts"] }
log = { workspace = true }
parking_lot = { workspace = true }

# Self-hosted overlay spike (own egui + DX11 renderer; zero host-egui coupling).
[target.'cfg(windows)'.dependencies]
egui-directx11 = "=0.12.1"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[lints]
workspace = true
