[package]
name = "honse-debug"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Development-only plugin that records view transitions and live debug values"

[lib]
name = "honse_debug"
crate-type = ["cdylib", "rlib"]

[dependencies]
edge-sdk = { path = "../../crates/edge-sdk" }
honse-services = { path = "../../crates/honse-services" }
honse_ui = { path = "../../crates/honse-ui" }
egui = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
